--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,9 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=127.0.0.1 # or db for docker
 DB_PORT=3306
+DB_EXTERNAL_PORT=3308
 DB_DATABASE=ultimate_admin
 DB_USERNAME=root
 DB_PASSWORD=
@@ -22,8 +23,9 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_URL=tcp://redis:6379
+REDIS_HOST=redis
+REDIS_PASSWORD=ultimateadmin
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
