--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+FRONT_URL=http://localhost
+APP_API="${APP_URL}/api"
 EXTERNAL_APP_URL=http://localhost:3000
 
 LOG_CHANNEL=stack
